DuPont DevSB/src/objects/sma__MAAssignmentDebugLog__c.object
<CustomObject>
    <fields>
        <fullName>sma__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>MapAnything Auto-Assignment Logs</relationshipLabel>
        <relationshipName>AccountAutoAssignmentLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sma__Body__c</fullName>
        <label>Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sma__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sma__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>MapAnything Auto-Assignment Logs</relationshipLabel>
        <relationshipName>LeadAutoAssignmentLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sma__Plan__c</fullName>
        <label>MapAnything Assignment Plan</label>
        <referenceTo>sma__MAAssignmentPlan__c</referenceTo>
        <relationshipLabel>MapAnything Auto-Assignment Logs</relationshipLabel>
        <relationshipName>PlanLogs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sma__Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MapAnything Assignment Rule</label>
        <referenceTo>sma__MAAssignmentRule__c</referenceTo>
        <relationshipLabel>MapAnything Auto-Assignment Logs</relationshipLabel>
        <relationshipName>RuleLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>MapAnything Assignment Debug Log</label>
    <listViews>
        <fullName>sma__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>MapAnything Assignment Debug Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MapAnything Assignment Debug Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>